<resources>
    <string name="app_name">派工</string>
    <string name="mine">我的</string>
    <string name="handled_order">完成订单</string>
    <string name="handling">进行中</string>
    <string name="order_task">订单任务</string>
    <string name="handled">已处理</string>
    <string name="pending">待处理</string>
    <string name="pend">派单</string>
    <string name="sign">签到</string>
    <string name="imei_number">IMEI号：</string>
    <string name="satellite">卫星</string>
    <string name="map">地图</string>
    <string name="start">开始</string>
    <string name="modify">(改)</string>
    <string name="look_map">查看地图</string>
    <string name="look_location">查看定位</string>
    <string name="password_old">原密码：</string>
    <string name="password_new_ensure">确认新密码：</string>
    <string name="password_new">新密码：</string>
    <string name="ensure">确认</string>
    <string name="choice_date">选择年月：</string>
    <string name="statistics">质量统计</string>
    <string name="type">类型</string>
    <string name="number">数量</string>
    <string name="tai">台</string>
    <string name="door">上门</string>
    <string name="car">车辆</string>
    <string name="online">有线</string>
    <string name="lineless">无线</string>
    <string name="engineer">工程师</string>
    <string name="choice">请选择</string>
    <string name="cancel">取消</string>
    <string name="enter_account">请输入账号</string>
    <string name="enter_password">请输入密码</string>
    <string name="remember_password">   记住密码</string>
    <string name="login">登录</string>
    <string name="login_message">汽车金融数据经济构筑者</string>
    <string name="is_return_order">退单？</string>
    <string name="contact">现场联系人</string>
    <string name="remarks">备注</string>
    <string name="ge">个</string>
    <string name="ge_middle">个，无线</string>
    <string name="wire">有线</string>
    <string name="return_order">退单</string>
    <string name="unable_arrive_on_time">无法按时到达</string>
    <string name="no_device">缺少设备</string>
    <string name="manager_ask">主任要求</string>
    <string name="other_reason">其他原因</string>
    <string name="submit">提交</string>
    <string name="known">知道了</string>
    <string name="tip">提示</string>
    <string name="choice_map">请选择地图</string>
    <string name="next_step">下一步</string>
    <string name="submit_order">提交订单</string>
    <string name="frame_no">车架号</string>
    <string name="enter_frame_no">请输入车架号</string>
    <string name="frame_no_">车架号：</string>
    <string name="pending_no">派单数量</string>
    <string name="complete_no">完成数量</string>
    <string name="car_no">车牌号</string>
    <string name="enter_car_no">请输入车牌号</string>
    <string name="car_no_">车牌号：</string>
    <string name="car_type">车型</string>
    <string name="enter_car_type">请输入车型</string>
    <string name="place">安装位置</string>
    <string name="connection_pic">接线图</string>
    <string name="flush">刷新</string>
    <string name="remove_no">拆除数量</string>
    <string name="device_type">设备类型</string>
    <string name="device_name">设备名称</string>
    <string name="device_name_">设备名称：</string>
    <string name="save">保存</string>
    <string name="ole_install_position">旧安装位置</string>
    <string name="old_install_pic">旧接线图</string>
    <string name="install_worker">安装人：</string>
    <string name="fault_describe">故障描述</string>
    <string name="repair_suggest">维修建议</string>
    <string name="install_place">安装位置</string>
    <string name="enter_install_place">请输入安装位置</string>
    <string name="install_pic">接线图</string>
    <string name="explain">检修说明</string>
    <string name="enter_explain">请输入故障说明...</string>
    <string name="repair_replace">维修更换</string>
    <string name="not_replace">不更换</string>
    <string name="pending_audit">待审核</string>
    <string name="audit_fault">审核未通过</string>


    <string name="tip_pic">提示:请上传照片！</string>
    <string name="tip_imei">提示:请输入8位以上设备号！</string>
    <string name="tip_locate">提示:未查看设备定位！</string>
    <string name="tip_explain">提示:请输入故障说明</string>
    <string name="tip_position">提示:安装位置不能为空！</string>
    <string name="tip_carno">提示:请输入车牌号！</string>
    <string name="tip_car_type">提示:请输入车型！</string>
    <string name="tip_carno_fault">提示:请输入正确的车牌号！</string>
    <string name="msg_part_complete">设备未全部安装，仍然提交？</string>
    <string name="msg_null_complete">确认提交空单么？</string>

    <string name="msg_search_null">没有查询到符合搜索条件的订单~</string>

    <string name="msg_not_perfect">卡片内容填写不完整，请完善后再提交！</string>
    <string name="order_canceled">订单已被取消！</string>
    <string name="contact_worker">联系安装师傅</string>

    <array name="picker_month">
        <item>01 月</item>
        <item>02 月</item>
        <item>03 月</item>
        <item>04 月</item>
        <item>05 月</item>
        <item>06 月</item>
        <item>07 月</item>
        <item>08 月</item>
        <item>09 月</item>
        <item>10 月</item>
        <item>11 月</item>
        <item>12 月</item>
    </array>

    <array name="picker_day">
        <item>今天</item>
        <item>明天</item>
        <item>后天</item>
    </array>

    <array name="picker_hour">
        <item>00点</item>
        <item>01点</item>
        <item>02点</item>
        <item>03点</item>
        <item>04点</item>
        <item>05点</item>
        <item>06点</item>
        <item>07点</item>
        <item>08点</item>
        <item>09点</item>
        <item>10点</item>
        <item>11点</item>
        <item>12点</item>
        <item>13点</item>
        <item>14点</item>
        <item>15点</item>
        <item>16点</item>
        <item>17点</item>
        <item>18点</item>
        <item>19点</item>
        <item>20点</item>
        <item>21点</item>
        <item>22点</item>
        <item>23点</item>
    </array>

    <array name="picker_min">
        <item>00 分</item>
        <item>10 分</item>
        <item>20 分</item>
        <item>30 分</item>
        <item>40 分</item>
        <item>50 分</item>
    </array>
</resources>
