<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_item"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:text="@string/return_order"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@color/colorBlueTheme"/>

    <RadioGroup
        android:id="@+id/rg_layout_return_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8">

        <RadioButton
            android:id="@+id/rb_layout_return_order_timeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unable_arrive_on_time"/>

        <RadioButton
            android:id="@+id/rb_layout_return_order_no_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_device"/>

        <RadioButton
            android:id="@+id/rb_layout_return_order_manager_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager_ask"/>

        <RadioButton
            android:id="@+id/rb_layout_return_order_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_reason"/>
    </RadioGroup>

    <EditText
        android:id="@+id/et_layout_return_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit"
        android:gravity="start"
        android:hint="@string/other_reason"
        android:maxLength="200"
        android:minHeight="@dimen/dp_96"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_layout_return_order_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/dp_4"
        android:text="0/200"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_layout_return_order_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@color/colorBlueTheme"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_layout_return_order_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@color/colorBlueTheme"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>


</LinearLayout>