<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/fl_item_repair"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_item_installing_blue">

    <ImageView
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_64"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_item_car"/>

    <ImageView
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_32"
        android:layout_gravity="top|end"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:src="@drawable/ic_item_go"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16">

        <TextView
            android:id="@+id/tv_item_repair_device_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_type"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_item_repair_device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_item_repair_device_type"
            android:layout_marginTop="@dimen/dp_4"
            android:text="6546464645321321398"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_item_repair_device_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_item_repair_device_id"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/device_name"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_item_repair_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_item_repair_device_name_title"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/device_name"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_item_repair_car_no_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_item_repair_device_name"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/car_no_"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_item_repair_car_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_item_repair_car_no_title"
            android:layout_alignBottom="@+id/tv_item_repair_car_no_title"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_toEndOf="@+id/tv_item_repair_car_no_title"
            android:layout_toRightOf="@+id/tv_item_repair_car_no_title"
            android:text="@string/car_no"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_item_repair_frame_no_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_item_repair_car_no_title"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/frame_no_"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_item_repair_frame_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_item_repair_frame_no_title"
            android:layout_alignBottom="@+id/tv_item_repair_frame_no_title"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_toEndOf="@+id/tv_item_repair_frame_no_title"
            android:layout_toRightOf="@+id/tv_item_repair_frame_no_title"
            android:text="@string/frame_no"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>

</FrameLayout>