<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/dp_8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:text="@string/tip"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@color/colorBlueTheme"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_72"
        android:gravity="center"
        android:text="确认签到？（签到会核对定位地址）"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dialog_ask_sign_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@color/colorBlueTheme"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_16"
            android:paddingTop="@dimen/dp_16"
            android:text="@string/ensure"/>

        <TextView
            android:id="@+id/tv_dialog_ask_sign_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@color/colorBlueTheme"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_16"
            android:paddingTop="@dimen/dp_16"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>