<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tianyigps.xiepeng.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_120"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_120"
        android:src="@drawable/ic_login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_64"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_account" />

        <EditText
            android:id="@+id/et_activity_login_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@color/colorNull"
            android:hint="@string/enter_account"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@color/colorBlueTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/et_activity_login_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@color/colorNull"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@color/colorBlueTheme" />

    <Button
        android:id="@+id/btn_activity_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_96"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="@dimen/dp_64"
        android:text="@string/login_message" />
</LinearLayout>
