<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modify_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_32"
    tools:context="com.tianyigps.xiepeng.activity.ModifyPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_32"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_old"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_activity_modify_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorNull"
            android:imeOptions="actionNext"
            android:lines="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/colorBlueTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_32"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_new"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_activity_modify_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorNull"
            android:imeOptions="actionNext"
            android:lines="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/colorBlueTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_32"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_new_ensure"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_activity_modify_password_new_ensure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorNull"
            android:imeOptions="actionNext"
            android:lines="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/colorBlueTheme" />

    <Button
        android:id="@+id/btn_activity_modify_password_ensure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_48"
        android:background="@color/colorBlueTheme"
        android:text="@string/ensure"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_18" />

</LinearLayout>
